--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Details of Life
 email: zstang@outlook.com
 description: >- # this means to ignore newlines until "baseurl:"
-  点滴细节，略作记录. ai生成，仅作参考
+  点滴细节，略作记录. ai生成，仅作参考 [gemini, grok, 豆包, 腾讯元宝, DeepSeek]
 
 
 # Build settings
